--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask
-gunicorn
-python-dotenv
-cloudinary
-
+Flask==2.3.3
+gunicorn==21.2.0
+python-dotenv==1.0.0
+cloudinary==1.35.0
+SQLAlchemy==3.0.0
+psycopg2-binary==2.9.9
+Flask-SQLAlchemy==3.1.1
